Reviewing and improving translate

--- a/pt-br.html
+++ b/pt-br.html
@@ -9,7 +9,7 @@ layout: default
   </div>
   <div class="col">
     <blockquote>
-      <p>Toda linha de código deve parecer que foi escrita por uma única pessoal, não importa a quantidade de contribuidores.</p>
+      <p>Toda linha de código deve parecer que foi escrita por uma única pessoa, não importa a quantidade de contribuidores.</p>
     </blockquote>
   </div>
 </div>
@@ -45,20 +45,20 @@ layout: default
 
 <div class="section" id="html-practicality">
   <div class="col">
-    <h3>Praticando a pureza</h3>
-    <p>Esforce-se para manter o padrão e a semântica do HTML, mas não Strive to maintain HTML standards and semantics, mas não às custas da praticidade. Use o mínimo de código com o menor número de complexidade possível.</p>
+    <h3>Praticidade em vez de pureza</h3>
+    <p>Esforce-se para manter o padrão e a semântica do HTML, mas não às custas da praticidade. Use o mínimo de código com a menor complexidade possível.</p>
   </div>
 </div>
 
 <div class="section" id="html-attribute-order">
   <div class="col">
     <h3>Ordem dos atributos</h3>
-    <p>Atributos HTML deem vir com esta ordem particular para facilitar a leitura do código.</p>
+    <p>Atributos HTML devem usar esta ordem em particular para facilitar a leitura do código.</p>
     <ul>
       <li><code>class</code></li>
       <li><code>id</code></li>
       <li><code>data-*</code></li>
-      <li><code>for</code>, <code>type</code>, or <code>href</code></li>
+      <li><code>for</code>, <code>type</code>, ou <code>href</code></li>
     </ul>
   </div>
   <div class="col">
@@ -70,7 +70,7 @@ layout: default
   <div class="col">
     <h3>Atributos booleanos</h3>
     <p>Um atributo boleano é o único que não precisa ter valores declarados. XHTML precisa que você declare um valor, mas no HTML5 isso não é necessário.</p>
-    <p>Para uma leitura adicional, consulte a <a href="http://www.whatwg.org/specs/web-apps/current-work/multipage/common-microsyntaxes.html#boolean-attributes">seção do WhatWG sobre atributos booleanos.</a>:</p>
+    <p>Para uma leitura adicional, consulte a <a href="http://www.whatwg.org/specs/web-apps/current-work/multipage/common-microsyntaxes.html#boolean-attributes">seção do WhatWG sobre atributos booleanos</a>:</p>
     <blockquote>
       <p>A presença de um atributo boleano representa um valor verdadeiro e a ausência do atributo representa um valor falso.</p>
     </blockquote>
@@ -88,7 +88,7 @@ layout: default
 <div class="section" id="html-reducing-markup">
   <div class="col">
     <h3>Reduzindo o markup</h3>
-    <p>Sempre que possível, evite elementos pais supérfluos quando escrever HTML. Muitas vezes isto significa de ter uma interação maior ou refatoração, mas isso produz pouco HTML. Veja o seguinte exemplo:</p>
+    <p>Sempre que possível, evite elementos pais supérfluos quando escrever HTML. Muitas vezes é necessário uma interação ou refatoração, mas isso produz pouco HTML. Veja o seguinte exemplo:</p>
   </div>
   <div class="col">
     {% highlight html %}{% include html/reducing-markup.html %}{% endhighlight %}
@@ -98,7 +98,7 @@ layout: default
 <div class="section" id="html-javascript">
   <div class="col">
     <h3>Markup gerado por Javascript</h3>
-    <p>Escrever código em um arquivos Javascript faz com que o conteúdo seja difícil de ser encontrado, difícil de ser editado e o tornam menos performático. Evite o máximo possível.</p>
+    <p>Escrever código em um arquivos Javascript faz com que o conteúdo seja difícil de ser encontrado, difícil de ser editado e o torna menos performático. Evite fazer isso o máximo possível.</p>
   </div>
 </div>
 
@@ -112,19 +112,19 @@ layout: default
     <ul>
       <li>Use soft-tabs com dois espaços.</li>
       <li>Quando agrupar seletores, deixe seletores individuais em uma linha.</li>
-      <li>Inclua on espaço antes de abrir um colchete.</li>
-      <li>Coloque o fechamento do colchete em uma nova linha</li>
+      <li>Inclua um espaço antes de abrir um colchete.</li>
+      <li>Coloque o fechamento do colchete em uma nova linha.</li>
       <li>Inclua um espaço depois dos dois pontos <code>:</code> em cada declaração de propriedade.</li>
       <li>Cada declaração deve estar em sua própria linha para encontrarmos melhor os erros.</li>
       <li>Feche todas as declarações com ponto-vírgula <code>;</code>.</li>
-      <li>Valores separados por vírgula devem incluir um spaço logo depois da vírgula.</li>
-      <li>Não inclua espaços depois das vírgulas <em>como em</em> cores <code>rgb()</code> ou <code>rgba()</code>, e não comece valores iniciando com zero.</li>
-      <li>Deixe todos os valores hexadecimais em caixa baixa, exe., <code>#fff</code>.</li>
-      <li>Use cores em hexadecimal abrevidas quando puder, ex., <code>#fff</code> em vez de <code>#ffffff</code>.</li>
-      <li>Coloque aspas nos valores em seletores com atributos, ex., <code>input[type="text"]</code>.</li>
-      <li>Evite especificar unidades quando os valores forem 0, ex., <code>margin: 0;</code> em vez de  <code>margin: 0px;</code>.</li>
+      <li>Valores separados por vírgula devem incluir um espaço logo depois da vírgula.</li>
+      <li>Não inclua espaços depois das vírgulas <em>como em</em> cores <code>rgb()</code> ou <code>rgba()</code> e não inicie valores com zero.</li>
+      <li>Deixe todos os valores hexadecimais em caixa baixa, exemplo: <code>#fff</code>.</li>
+      <li>Use cores em hexadecimal abrevidas quando puder, exemplo: <code>#fff</code> em vez de <code>#ffffff</code>.</li>
+      <li>Coloque aspas nos valores em seletores com atributos, exemplo: <code>input[type="text"]</code>.</li>
+      <li>Evite especificar unidades quando os valores forem 0, exemplo: <code>margin: 0;</code> em vez de  <code>margin: 0px;</code>.</li>
     </ul>
-    <p>Tem perguntas sobre os termos usados aqui? Veja a <a href="http://en.wikipedia.org/wiki/Cascading_Style_Sheets#Syntax">seção de sintaxe dos CSS</a> no Wikipedia.</p>
+    <p>Dúvidas sobre os termos usados aqui? Veja a <a href="http://en.wikipedia.org/wiki/Cascading_Style_Sheets#Syntax">seção de sintaxe dos CSS</a> na Wikipedia.</p>
   </div>
   <div class="col">
     {% highlight css %}{% include css/syntax.css %}{% endhighlight %}
@@ -135,7 +135,7 @@ layout: default
   <div class="col">
     <h3>Ordem de declaração</h3>
     <p>Declarações relacionadas devem ser agrupadas, colocando posicionamento e as propriedades de box-model perto do topo, seguido das propriedades de tipografia e depois propriedades visuais.</p>
-    <p>Para uma lista completa das propriedades e suas ordens, por favor veja <a href="http://twitter.github.com/recess">Recess</a>.</p>
+    <p>Para uma lista completa das propriedades e suas ordens, por favor verifique a página do <a href="http://twitter.github.com/recess">Recess</a>.</p>
   </div>
   <div class="col">
     {% highlight css %}{% include css/declaration-order.css %}{% endhighlight %}
@@ -145,7 +145,7 @@ layout: default
 <div class="section" id="css-mediaa-queries">
   <div class="col">
     <h3>Onde colocar as Media Queries</h3>
-    <p>Coloque as Media Queries o mais perto possível de suas regras originais. Não coloque todas as media queries separadas em outros arquigos ou no final do documento. Fazendo assim, fica fácil para os outros se perderem no futuro. Veja um exemplo típico:</p>
+    <p>Coloque as Media Queries o mais perto possível de suas regras originais. Não as coloque separadas em outros arquivos ou no final do documento. Se você fizer isso, outros poderão não encontrá-las no futuro. Veja um exemplo típico:</p>
   </div>
   <div class="col">
     {% highlight css %}{% include css/media-queries.css %}{% endhighlight %}
@@ -176,7 +176,7 @@ layout: default
 <div class="section" id="css-nesting">
   <div class="col">
     <h3>Aninhamento (nesting) no LESS e SASS</h3>
-    <p>Evite aninhar seletores. Não é só por que você pode aninhar (nesting) seletores, significa que você deve fazê-lo sempre. Considere aninhar se você tem um escopo de estilos para um pai e se há múltiplos elementos para serem aninhados.</p>
+    <p>Evite aninhar seletores (fazer "nesting"). Só porque você pode fazer isso, não significa que você deve fazê-lo sempre. Considere aninhar se você tem um escopo de estilos para um pai e se há múltiplos elementos para serem aninhados.</p>
   </div>
   <div class="col">
     {% highlight scss %}{% include css/nesting.scss %}{% endhighlight %}
@@ -203,9 +203,9 @@ layout: default
     <h3>Nomes de classes</h3>
     <ul>
       <li>Mantenha as classes em caixa baixa e use traços (não underscores ou camelCase).</li>
-      <li>Evite user arbitrariamente notações abreviadas</li>
-      <li>Mantenha as pequenas e sucintas ao máximo possível</li>
-      <li>Use nomes com significado; use nomes ligados a estrutura em vez do visual.</li>
+      <li>Evite user arbitrariamente notações abreviadas.</li>
+      <li>Mantenha-as pequenas e sucintas ao máximo possível.</li>
+      <li>Use nomes com significado; use nomes ligados à estrutura em vez do visual.</li>
       <li>Prefixe nomes de classes baseadas nos componentes pais mais próximos.</li>
     </ul>
   </div>
@@ -220,7 +220,7 @@ layout: default
     <ul>
       <li>Use classes em vez de nomes de tags.</li>
       <li>Mantenha os seletores pequenos e limite o número de elementos em no máximo três.</li>
-      <li>Use nomes de classes do elemento pais <strong>apenas</strong> quando necessário (ex: quando não usar classes prefixadas). </li>
+      <li>Use nomes de classes do elemento pais <strong>somente</strong> quando necessário (ex: quando não usar classes prefixadas).</li>
     </ul>
     <p>Leitura adicional:</p>
     <ul>
@@ -251,10 +251,10 @@ layout: default
     <ul>
       <li>Use soft-tabs com 2 espaços</li>
       <li>Apague os espaços em brancos ao salvar</li>
-      <li>Defina UTF-8 como encode</li>
+      <li>Defina o encoding como UTF-8</li>
       <li>Coloque uma nova linha no final dos arquivos</li>
     </ul>
-    <p>Considere aplicar estas preferencias ao seu projeto com usando o arquivo <code>.editorconfig</code>, como o <a href="https://github.com/twbs/bootstrap/blob/master/.editorconfig">Bootstrap's</a>.</p>
+    <p>Considere aplicar estas preferências ao seu projeto com usando o arquivo <code>.editorconfig</code>, como o <a href="https://github.com/twbs/bootstrap/blob/master/.editorconfig">Bootstrap's</a>.</p>
   </div>
 </div>
 
@@ -265,6 +265,6 @@ layout: default
 <div class="section">
   <div class="col">
     <h3 id="sentencecase">Sentenças</h3>
-    <p>Sempre escreva a cópia, incluindo títulos e comentários de código, com a mesma <a href="http://en.wikipedia.org/wiki/Letter_case#Usage">capitalização</a>. Em outras palavras, tirando títulos e nomes próprios, apenas a primeira palavra deve ser capitalizada.</p>
+    <p>Sempre escreva a cópia, incluindo títulos e comentários de código, com a mesma <a href="http://en.wikipedia.org/wiki/Letter_case#Usage">capitalização</a>. Em outras palavras, tirando títulos e nomes próprios, apenas a primeira palavra deve iniciar com maiúscula.</p>
   </div>
 </div>
