Pequena revisão de texto.

--- a/pt-br.html
+++ b/pt-br.html
@@ -69,7 +69,7 @@ layout: default
 <div class="section" id="html-boolean-attributes">
   <div class="col">
     <h3>Atributos booleanos</h3>
-    <p>Um atributo boleano é o único que não precisa ter valores declarados. XHTML precisa que você declare um valor, mas no HTML5 isso não é necessário.</p>
+    <p>Um atributo boleano é o único que não precisa ter valores declarados. O XHTML precisa que você declare um valor, mas no HTML5 isso não é necessário.</p>
     <p>Para uma leitura adicional, consulte a <a href="http://www.whatwg.org/specs/web-apps/current-work/multipage/common-microsyntaxes.html#boolean-attributes">seção do WhatWG sobre atributos booleanos</a>:</p>
     <blockquote>
       <p>A presença de um atributo boleano representa um valor verdadeiro e a ausência do atributo representa um valor falso.</p>
@@ -202,8 +202,8 @@ layout: default
   <div class="col">
     <h3>Nomes de classes</h3>
     <ul>
-      <li>Mantenha as classes em caixa baixa e use traços (não underscores ou camelCase).</li>
-      <li>Evite user arbitrariamente notações abreviadas.</li>
+      <li>Mantenha as classes em caixa baixa e use traços (não use underscores ou camelCase).</li>
+      <li>Evite usar arbitrariamente notações abreviadas.</li>
       <li>Mantenha-as pequenas e sucintas ao máximo possível.</li>
       <li>Use nomes com significado; use nomes ligados à estrutura em vez do visual.</li>
       <li>Prefixe nomes de classes baseadas nos componentes pais mais próximos.</li>
