Ajuste do parágrafo "Enconding de Caractéres"
- Altero 'renderizaçnao' para renderização;
- Altero o contexto "Assegure-se rapidamente que a" para "Assegure-se rapidamente a".

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ layout: default
 <div class="section" id="html-encoding">
   <div class="col">
     <h3>Encoding de caractéres</h3>
-    <p>Assegure-se rapidamente que a renderizaçnao do seu conteúdo declarando o encoding de caractéres explicitamente.</p>
+    <p>Assegure-se rapidamente a renderização do seu conteúdo declarando o encoding de caractéres explicitamente.</p>
   </div>
   <div class="col">
     {% highlight html %}{% include html/encoding.html %}{% endhighlight %}
