update html attribute list w/ accessibility attrs
added title, alt, aria-* (e.g. area-hidden), and role attrs

--- a/index.html
+++ b/index.html
@@ -122,6 +122,9 @@ layout: default
       <li><code>id</code>, <code>name</code></li>
       <li><code>data-*</code></li>
       <li><code>for</code>, <code>type</code>, ou <code>href</code></li>
+      <li><code>src</code>, <code>for</code>, <code>type</code>, <code>href</code></li>
+      <li><code>title</code>, <code>alt</code></li>
+      <li><code>aria-*</code>, <code>role</code></li>
     </ul>
   </div>
   <div class="col">
