--- a/pt-br.html
+++ b/pt-br.html
@@ -1,5 +1,6 @@
 <script>
-if (window.location.href.indexOf('http://diegoeis.github.io/code-guide/pt-br.html') === 0) {
+if ((window.location.href.indexOf('http://diegoeis.github.io/code-guide/pt-br.html') === 0)
+    || (window.location.href.indexOf('http://diegoeis.github.io/code-guide/pt-br') === 0)){
   window.location.href = 'http://diegoeis.github.io/code-guide/';
 }
 </script>
