Duas correções no arquivo index.html.
1 - De 'Lestras' por 'Letras',
2 - De 'instead of' por 'em vez de'.

--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@ layout: default
       <li>Cada declaração deve estar em sua própria linha para encontrarmos melhor os erros.</li>
       <li>Feche todas as declarações com ponto-vírgula <code>;</code>.</li>
       <li>Valores separados por vírgula devem incluir um espaço logo depois da vírgula  (ex., <code>box-shadow</code>).</li>
-      <li>Não inclua espaços depois das vírgulas <em>como em</em> cores <<code>rgb()</code>, <code>rgba()</code>, <code>hsl()</code>, <code>hsla()</code> ou <code>rect()</code>. Isto ajuda a diferenciar múltiplos valores (vírgulas, sem espaço) de cores de propriedades múltiplas (vírgulas, com espaço). Também não coloque valores iniciados com zero (ex., <code>.5</code> instead of <code>0.5</code>).</li>
-      <li>Deixe todos os valores hexadecimais em caixa baixa, exemplo: <code>#fff</code>. Lestras com caixa baixa são mais fáceis de serem lidas e entendidas quando queremos scanear o documento.</li>
+      <li>Não inclua espaços depois das vírgulas <em>como em</em> cores <<code>rgb()</code>, <code>rgba()</code>, <code>hsl()</code>, <code>hsla()</code> ou <code>rect()</code>. Isto ajuda a diferenciar múltiplos valores (vírgulas, sem espaço) de cores de propriedades múltiplas (vírgulas, com espaço). Também não coloque valores iniciados com zero (ex., <code>.5</code> em vez de <code>0.5</code>).</li>
+      <li>Deixe todos os valores hexadecimais em caixa baixa, exemplo: <code>#fff</code>. Letras com caixa baixa são mais fáceis de serem lidas e entendidas quando queremos scanear o documento.</li>
       <li>Valores separados por vírgula devem incluir um espaço logo depois da vírgula.</li>
       <li>Não inclua espaços depois das vírgulas <em>como em</em> cores <code>rgb()</code> ou <code>rgba()</code> e não inicie valores com zero.</li>
       <li>Deixe todos os valores hexadecimais em caixa baixa, exemplo: <code>#fff</code>.</li>
