troca do nome do id na section nomes de classes para funcionar a ancora na lista nomes de classes

--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@ layout: default
   </div>
 </div>
 
-<div class="section" id="css-class-names">
+<div class="section" id="css-classes">
   <div class="col">
     <h3>Nomes de classes</h3>
     <ul>
